@@ -1,5 +1,11 @@
 2007-06-11  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-utils.c: 
+	Add man page resolver support.  Make info fall back
+	to man pages when not found
+
+2007-06-11  Don Scorgie  <dscorgie@svn.gnome.org>
+
 	* src/test-resolver.c:
 	Add gnome-vfs-init() and section (for results section)
 	
